--- a/assets/css/stylegaleria.css
+++ b/assets/css/stylegaleria.css
@@ -115,7 +115,7 @@ main {
     padding: 3px;
 }
 
-.paragrafo1 {
+article>p.paragrafo1 {
     font-size: 18px;
     color: whitesmoke;
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -193,6 +193,7 @@ footer {
         text-indent: 17px;
     }
 
+
     footer {
         width: 90vw;
         margin: auto;
@@ -260,6 +261,17 @@ footer {
         text-indent: 17px;
     }
 
+  .banguela {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        margin: 29px;
+        width: 20%;
+        border-radius: 7px 7px 7px 7px;
+        border-color: #123f15;
+        border-style: ridge;
+    }
+ 
     footer {
         width: 90vw;
         margin: auto;
